--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,44 @@
 } */
 .landing-cover-page-bg{
     background-image:url("./assets/left_bg_landing_header.svg"),url("./assets/right_bg_landing_header.svg"), url("./assets/center_bg_landing_header.svg"),url("./assets/tiny_stars_landing.svg");
-    background-position: bottom 0px left -20%,bottom  right -20%, center ,center;
+    background-position: bottom 0px left -30%,bottom  right -30%, center ,center;
     background-repeat: no-repeat, no-repeat,no-repeat,no-repeat;
+    background-size:53%,53%, cover,contain;
+}
+
+@media  screen(md) {
+  .landing-cover-page-bg{
+    background-position: bottom 0px left -20%,bottom  right -20%, center ,center;
     background-size:40%,40%, cover,contain;
+  }
+}
+
+
+
+@layer utilities{
+   
+    .scrollbar-custom::-webkit-scrollbar {
+        @apply w-1.5;
+      }
+      
+  
+      /* Track */
+      .scrollbar-custom::-webkit-scrollbar-track {
+        /* box-shadow: inset 0 0 5px grey;  */
+        @apply bg-gray-800;
+        border-radius: 10px;
+      }
+       
+      /* Handle */
+      .scrollbar-custom::-webkit-scrollbar-thumb {
+       @apply bg-slate-600 rounded-md ;
+       
+      }
+      
+      /* Handle on hover */
+      .scrollbar-custom::-webkit-scrollbar-thumb:hover {
+        @apply bg-slate-400  ; 
+      }
+
+     
 }
